--- a/submission/Warmup/README
+++ b/submission/Warmup/README
@@ -1,2 +1,5 @@
 validmediumrandom.csv	72
-
+1.csv                   29
+2.csv                   93
+"./a.out"               68
+"./a.out <invalid>"     68
